# ft_select

./: .gitignore  CMakeLists.txt  Makefile  allowed_function.md  doc.md  learn.md  main.c  render.sh  test.c  todo.md
includes/: ft_select.defines.h  ft_select.h  ft_select.prototypes.h  ft_select.structures.h
src/: CMakeLists.txt  ft_select.buffer.c  ft_select.canonical_mode.c  ft_select.css.c  ft_select.cursor_interaction.c  ft_select.cursor_interaction.helpers.c  ft_select.get_color_file.c  ft_select.getter.c  ft_select.getter_0.c  ft_select.getter_1.c  ft_select.init_termcap.c  ft_select.move_display.c  ft_select.parser.c  ft_select.print.c  ft_select.search.c  ft_select.search_select.c  ft_select.signals.c  ft_select.utils.c  ft_select.utils_0.c  ft_select.utils_1.c  ft_select.window.c  main.c  test.c
unit.test/: main.test.c  parser.test.c
